[package]
name = "goober"
version = "0.1.0"
edition = "2021"

[dependencies]
# Justification: convenience
emojis = "0.5"

# Justification: convenience
pico-args = "0.5"

# https://github.com/johnthagen/min-sized-rust#strip-symbols-from-binary
[profile.release]
strip = true
lto = true
opt-level = "z"
